[package]
name = "maynor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
bevy = "0.10.1"
dotenv = "0.15.0"
serde = "1.0.160"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres"] }
